--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(DEG_analysis)
 export(combine_sd_summary_table)
 export(exp2qcdt)
+export(get_one_group)
 export(make_performance_plot)
 export(make_score_figure)
 export(make_theme)
